--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
 
     <!-- PRICING SECTION -->
     <section id="pricing">
-      <div class="main-container" id="pricing-con">
+      <div class="main-container" id="pricing-cont">
         <h4 id="pricing-small">PRICING PLAN</h4>
         <h1 style="text-align: center; padding-top: 20px; color: #646464;"><strong>Invest in your learning journey</strong></h1>
         <p id="price-para">Supercharge your learning potential with our premium plans, unlocking a world of exclusive resources, personalized guidance, and unlimited access to our cutting-edge platform.</p>
